# Auto_Trade_v1

./: .dockerignore  .env.example  .gitignore  Claude_Leader.md  Dockerfile  Flow.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-build.txt  requirements-docker.txt  requirements.txt  setup_cython.py  strategy_params.json  trading_server.spec
CheckList/: 00_모니터링_시작.md  01_뉴스_파이프라인_60분.md  02_연속분석_Layer1_Layer2.md  03_센티넬_2분.md  04_Redis_키_전체목록.md  05_AI모델_호출_추적.md  06_장애_대응_가이드.md
REFACTORING/: 00-CURRENT-STATE.md
alembic/: env.py
dashboard/: IMPLEMENTATION_SUMMARY.md  README.md  SETUP_GUIDE.md  analysis_options.yaml  pubspec.yaml
data/: ticker_params.json  trading_principles.example.json  trading_principles.json
db/: init.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  CRAWLING_PIPELINE.md  DASHBOARD_GUIDE.md  DEPLOYMENT.md  README.md  RUNNING.md  SETUP.md  TRADING_GUIDE.md  TRADING_LOGIC.md  api-specification.md  audit-round12-logging-error-config.md  audit-round15-performance.md  audit-round23-magic-numbers.md  guardian-requirements-phase4.md  guardian-requirements-phase5.md  guardian-requirements.md  guardian-violations-phase2.md  guardian-violations-phase3.md  guardian-violations-phase4.md  guardian-violations-phase5.md  guardian-violations-r3.md  guardian-violations-r4.md  guardian-violations-s7.md  guardian-violations-session5.md  guardian-violations-session6.md  guardian-violations-v2.md  guardian-violations-v3.md  guardian-violations-v4.md  guardian-violations-v5.md  guardian-violations.md  pipeline-architecture.html  (+1 more)
(+624 files in other folders)
